fix: :bug: conserta o arquivo de estilo

--- a/views/chatView.ejs
+++ b/views/chatView.ejs
@@ -9,13 +9,14 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <form id="chat">
+  <form id="chat" class="chat">
     <div class="messages" id="messages"></div>
     <div class="div-input-button">
       <input
         type="text"
         placeholder="digite sua mensagem"
         id="message"
+        class="message"
         data-testid="message-box"
       >
       <button
@@ -31,6 +32,7 @@
         type="text"
         placeholder="crie seu usuário"
         id="username"
+        class="username"
         data-testid="nickname-box"
       >
       <button
