--- a/views/chatView.ejs
+++ b/views/chatView.ejs
@@ -10,7 +10,10 @@
 </head>
 <body>
   <form id="chat" class="chat">
-    <div class="messages" id="messages"></div>
+    <div class="main-section">
+      <div class="messages" id="messages"></div>
+      <div class="online-users" id="online-users"></div>
+    </div>
     <div class="div-input-button">
       <input
         type="text"
