--- a/views/styles.css
+++ b/views/styles.css
@@ -5,6 +5,7 @@
 }
 
 html , body {
+  background-color: rgb(14, 14, 14);
   height: 100%;
 }
 
@@ -20,6 +21,7 @@ html , body {
 
 .main-section {
   display: flex;
+  height: 60vh;
   justify-content: space-between;
   width: 60vw;
 }
@@ -34,6 +36,7 @@ html , body {
 
 .message , .username {
   border: 1px solid #ddd;
+  border-radius: 10px;
   font-size: 1.5rem;
   height: 5rem;
   padding: 0 2rem;
@@ -43,6 +46,7 @@ html , body {
 button {
   background: purple;
   border: none;
+  border-radius: 10px;
   color: white;
   font-size: 1.5rem;
   font-weight: 700;
@@ -57,9 +61,10 @@ button:hover {
 }
 
 .messages , .online-users {
+  background-color: white;
   border: 1px solid #ddd;
-  height: 30vw;
   margin: 2rem 0;
+  overflow-x: scroll;
   padding: 2rem;
 }
 
